<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="itemListWeather"
            type="com.example.domain.entities.ListWeather" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/item_weather_card_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/item_weather_card_margin_horizontal"
        android:layout_marginTop="@dimen/item_weather_card_margin_vertical"
        android:layout_marginEnd="@dimen/item_weather_card_margin_horizontal"
        android:layout_marginBottom="@dimen/item_weather_card_margin_vertical"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/item_weather_card_corner_radius"
        app:contentPaddingBottom="@dimen/item_padding_card"
        app:contentPaddingLeft="@dimen/item_padding_card"
        app:contentPaddingRight="@dimen/item_padding_card"
        app:contentPaddingTop="@dimen/item_padding_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_item_temp"
                style="@style/WeatherItemStyle"
                android:text="@{String.valueOf(itemListWeather.mainResponse.temperature)}"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_item_celsius"
                app:layout_constraintEnd_toStartOf="@+id/text_view_item_celsius"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/details_item_temp" />

            <TextView
                android:id="@+id/text_view_item_celsius"
                style="@style/WeatherItemStyle"
                android:text="@string/details_item_celsius"
                app:layout_constraintBottom_toTopOf="@+id/text_view_item_temp_max"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_view_item_temp"
                app:layout_constraintTop_toBottomOf="@+id/text_view_item_description" />

            <TextView
                android:id="@+id/text_view_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{itemListWeather.weatherResponse.get(0).description}"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintBottom_toTopOf="@+id/text_view_item_celsius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_item_day"
                tools:text="@string/details_item_description" />

            <TextView
                android:id="@+id/text_view_item_day"
                style="@style/DayItemStyle"
                android:text="@{itemListWeather.dtTxt}"
                app:layout_constraintBottom_toTopOf="@+id/text_view_item_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="@string/details_item_day" />

            <TextView
                android:id="@+id/text_view_item_temp_min"
                style="@style/WeatherItemStyle"
                android:text="@{String.valueOf(itemListWeather.mainResponse.min)}"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_item_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_view_item_bar"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/details_item_min_temp" />

            <TextView
                android:id="@+id/text_view_item_temp_max"
                style="@style/WeatherItemStyle"
                android:text="@{String.valueOf(itemListWeather.mainResponse.max)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_view_item_bar"
                app:layout_constraintTop_toBottomOf="@+id/text_view_item_celsius"
                tools:text="@string/details_item_max_temp" />

            <TextView
                android:id="@+id/text_view_item_bar"
                style="@style/WeatherItemStyle"
                android:text="@string/item_bar"
                app:layout_constraintBottom_toBottomOf="@+id/text_view_item_temp_max"
                app:layout_constraintEnd_toStartOf="@+id/text_view_item_temp_max"
                app:layout_constraintStart_toEndOf="@+id/text_view_item_temp_min" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
